Refactor to use walletProvider everywhere instead of client to prepare for refactor of walletProvider working with two clients

--- a/ts-client/tsconfig.json
+++ b/ts-client/tsconfig.json
@@ -6,6 +6,7 @@
       "outDir": "./lib",
       "allowSyntheticDefaultImports": true,
       "esModuleInterop": false,
+      "noImplicitAny": false,
       "strict": false,
       "skipLibCheck": true
     }
