Big refactor: - unused composable modules cleanup. - wallet reworked- - Cosmos balances working. Denom IBC resolving working. - groundwork for assets on different chains and secret assets

--- a/ts-client/tsconfig.json
+++ b/ts-client/tsconfig.json
@@ -8,6 +8,7 @@
       "esModuleInterop": false,
       "noImplicitAny": false,
       "strict": false,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "importsNotUsedAsValues": "preserve"
     }
   }
