--- a/vue/tsconfig.config.json
+++ b/vue/tsconfig.config.json
@@ -2,8 +2,8 @@
   "extends": "@vue/tsconfig/tsconfig.node.json",
   "include": ["vite.config.*", "vitest.config.*", "cypress.config.*"],
   "compilerOptions": {
-    "composite": true,
     "moduleResolution": "Node",
+    "noImplicitAny": false,
     "types": ["node","crypto-js", "qrcode", "events"]
   }
 }
