--- a/vue/tsconfig.json
+++ b/vue/tsconfig.json
@@ -1,7 +1,33 @@
 {
   "files": [],
   "compilerOptions": {
-    "noImplicitAny": false
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "skipLibCheck": true,
+    "noImplicitAny": false,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "baseUrl": "./public",
+    "types": [
+      "webpack-env"
+    ],
+    "paths": { // very important to make your import @app work
+      "@app/*": [
+        "*"
+      ]
+    },
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
+    ]
   },
   "references": [
     {
