created Dockerfile and fixed build issues

--- a/vue/tsconfig.app.json
+++ b/vue/tsconfig.app.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "baseUrl": ".",
+    "composite": true,
     "paths": {
       "@/*": ["./src/*"]
     },
