--- a/vue/tsconfig.config.json
+++ b/vue/tsconfig.config.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "moduleResolution": "Node",
     "noImplicitAny": false,
+    "composite": true,
     "types": ["node","crypto-js", "qrcode", "events"]
   }
 }
