--- a/vue/package.json
+++ b/vue/package.json
@@ -10,7 +10,7 @@
     "bignumber.js": "^9.1.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.6",
-    "example-client-ts": "file:../ts-client",
+    "example-client-ts": "0.0.1",
     "gradient-avatar": "^1.0.2",
     "long": "^5.2.0",
     "pinia": "^2.1.6",
@@ -30,6 +30,7 @@
     "@types/jsdom": "^20.0.0",
     "@types/node": "^18.11.8",
     "@types/qrcode": "^1.5.0",
+    "@types/webpack-env": "^1.18.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
@@ -61,7 +62,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "postinstall": "node postinstall.js",
     "prepare": "node prepare.js",
-    "preview": "vite preview --port 4173",
+    "preview": "vite preview --port 4173 --host",
     "type-check": "vue-tsc --noEmit"
   },
   "version": "0.4.3"
