--- a/ts-client/tsconfig.json
+++ b/ts-client/tsconfig.json
@@ -9,6 +9,7 @@
       "noImplicitAny": false,
       "strict": false,
       "skipLibCheck": true,
-      "importsNotUsedAsValues": "preserve"
+      "composite": true,
+      "importsNotUsedAsValues": "preserve",
     }
   }
