--- a/vue/package.json
+++ b/vue/package.json
@@ -6,6 +6,7 @@
     "@headlessui/vue": "^1.7.3",
     "@ignt/vue-library": "^0.4.3",
     "@tanstack/vue-query": "^4.13.5",
+    "@xstate/fsm": "^2.1.0",
     "@xstate/vue": "^2.0.0",
     "axios": "^1.1.3",
     "bignumber.js": "^9.1.0",
